[gd_scene load_steps=9 format=3 uid="uid://b8gfwbv0mlsli"]

[ext_resource type="Script" uid="uid://cri5kfxgv0wlq" path="res://scripts/bird.gd" id="1_crnqq"]
[ext_resource type="PackedScene" uid="uid://ct4pe74frdl1n" path="res://models/BIRD.glb" id="1_g5k2s"]
[ext_resource type="AudioStream" uid="uid://iljgh5r37ph8" path="res://Audio/bird_sound_1.mp3" id="3_j88tq"]
[ext_resource type="AudioStream" uid="uid://dnaog5nawos30" path="res://Audio/bird_death_1.mp3" id="4_twsrt"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g5k2s"]
size = Vector3(1.32031, 0.332764, 1.21997)

[sub_resource type="Animation" id="Animation_twsrt"]
length = 0.001
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bird")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.707107, 0, 0.707107)

[sub_resource type="Animation" id="Animation_hq4t0"]
resource_name = "death"
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bird")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0.0333333, 1, 0, 0.707107, 0, 0.707107, 0.166667, 1, -0.691655, 0.147016, 0.691655, 0.147016)
tracks/1/type = "scale_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bird")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array()
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bird")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 1, 0, -1.945, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_twsrt"]
_data = {
&"RESET": SubResource("Animation_twsrt"),
&"death": SubResource("Animation_hq4t0")
}

[node name="bird" type="CharacterBody3D" groups=["Birds"]]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_crnqq")

[node name="Node3D" type="Node3D" parent="."]

[node name="Bird" parent="." instance=ExtResource("1_g5k2s")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-3.33969e-08, 2.82016e-08, 1, 0.645178, 0.764033, 0, -0.764033, 0.645178, -4.37114e-08, -0.0464833, 0.000355048, 0.0188451)
shape = SubResource("BoxShape3D_g5k2s")

[node name="Squak" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_j88tq")
bus = &"Environment"

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_twsrt")
bus = &"GUNSHOT"

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="SquakDelay" type="Timer" parent="."]

[node name="DeathAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_twsrt")
}

[node name="DeathDelay" type="Timer" parent="."]

[node name="test" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[connection signal="finished" from="Squak" to="." method="_on_squak_finished"]
[connection signal="finished" from="DeathSound" to="." method="_on_squak_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SquakDelay" to="." method="_on_squak_delay_timeout"]
[connection signal="timeout" from="DeathDelay" to="." method="_on_death_delay_timeout"]
[connection signal="timeout" from="test" to="." method="test"]
